# phoebus

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  query.graphql  schema.graphql
examples/http-axum/: graphiql.rs  graphiql_v2_source.hbs  introspection.graphql  main.rs  resolvers.rs  schema.graphql
src/: introspection.rs  lib.rs  main.rs  resolver.rs  value.rs
src/executor/: collect_fields.rs  futures.rs  mod.rs
src/value/: mod.rs  serializer.rs  value_serde.rs
