[package]
name = "phoebus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#apollo-compiler = { git = "https://github.com/zackangelo/apollo-rs.git", branch = "encoder_mut" }
apollo-compiler = { path = "../apollo-rs/crates/apollo-compiler" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.153", features = ["derive"] }
serde_json = "1.0.94"
tracing = "0.1.37"
anyhow = "1.0.69"
indexmap = { version = "1.9.2", features = [ "serde" ] }
bytes = "1.4.0"
async-recursion = "1.0.4"
async-trait = "0.1.68"
futures = "0.3.27"

[dev-dependencies] 
tracing-subscriber = { version = "0.3.16", features = [ "env-filter" ] }
